# codeAssistant

./: .gitignore  README.md  pyproject.toml
codeassist/: codingAssistant.py
codeassist/routes/: email_route.py
codeassist/source/: emailBuddy.py
codeassistant/: codingAssistant.py  emailBuddy.py
codingassistant/: emailBuddy.py
tests/unit_tests/emailBuddy/: emailBuddyModule.py
