[tool.poetry]
name = "codeassistant"
version = "0.1.0"
description = ""
authors = ["apoplexi <shivanandanasharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_email_buddy = "codeassistant.emailBuddy:main"